--- a/_posts/C++/2022-03-03-용어정리.md
+++ b/_posts/C++/2022-03-03-용어정리.md
@@ -30,7 +30,7 @@ C++ 용어정리
 ### 생성자(Constructors)의 특징
 
 1. 따로 정의를 해주지 않아도 실행된다. (기본 생성자 생성) - 괄호를 쓰지 않음
-2. 따로 생성해 주면 기본 생성자는 생성되지 않음 - 괄호를 써야함.
+2. 따로 생성해 주면 기본 생성자는 생성되지 않음 - 괄호를 써야함..
 
 
 
